# pastesian

./: README.md  darts_puzzle_v2.py  random_puzzle.py  requirements.txt  setup.cfg
docs/: README.md  pastesian.ipynb
pastesian/: __init__.py  __main__.py  action_example.py  action_local_data_integrity.py  action_update_demand.py  main.py  schemas.py  utils.py
test_pastesian/: 1_testing_pastesian.py  action_local_data_integrity.py  execute_locally.py  test_pastesian.py  testing_pastesian.py
test_pastesian/data/data_integrity_report/: data_row_failures.csv  data_type_failures.csv  duplicate_rows.csv  foreign_key_failures.csv
test_pastesian/data/data_integrity_reports/: data_type_failures.csv  duplicate_rows.csv  foreign_key_failures.csv
test_pastesian/data/inputs/: costs.csv  demand.csv  parameters.csv  testing_data.CSV  testing_data.xlsx  time_periods.csv
test_pastesian/data/outputs/: costs.csv  production_flow.csv
test_pastesian/data/testing_data/: 1_input.json  1_output.json
