[metadata]
name = pastesian
version = attr: pastesian.__version__
author = Luiz Suzana
author_email = luiz.suzana@mipwise.com
description = Illustration package about the pastesian problem
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mipwise/pastesian
project_urls =
    Bug Tracker = https://github.com/mipwise/pastesian/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = pastesian
install_requires =
    ticdat>=0.2.21
    pandas>=0.18.1
    gurobipy==9.5.0
    pulp>=1.20
python_requires = >=3.6
